ArchLinux-Firewall/Current_Firewall
# Generated by iptables-save v1.4.21 on Mon Nov 30 04:38:52 2015
*filter
:INPUT ACCEPT [16:2524]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [16:3562]
-A INPUT -i enp0s3 -p icmp -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp0s8 -o enp0s3 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp0s8 -o enp0s3 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp0s8 -o enp0s3 -j ACCEPT
-A OUTPUT -p icmp -j DROP
COMMIT
# Completed on Mon Nov 30 04:38:52 2015
# Generated by iptables-save v1.4.21 on Mon Nov 30 04:38:52 2015
*nat
:PREROUTING ACCEPT [2:96]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [9:609]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o enp0s3 -j MASQUERADE
-A POSTROUTING -o enp0s3 -j MASQUERADE
-A POSTROUTING -o enp0s3 -j MASQUERADE
COMMIT
# Completed on Mon Nov 30 04:38:52 2015
